--- a/inst/scripts/v01/make-data_for_v01.html
+++ b/inst/scripts/v01/make-data_for_v01.html
@@ -209,8 +209,7 @@ document.addEventListener("DOMContentLoaded", function() {
       links[i].target = '_blank';
 });
 </script>
-<p><strong>Last modified:</strong> NA<br />
-<strong>Compiled</strong>: Fri Sep 17 01:15:56 2021</p>
+<p><strong>Compiled</strong>: Fri Sep 17 01:23:32 2021</p>
 <p><strong>This script for the v01 dataset</strong></p>
 <div id="load-the-package" class="section level1" number="1">
 <h1><span class="header-section-number">1</span> Load the package</h1>
