--- a/inst/scripts/v02/make-data_for_v02.html
+++ b/inst/scripts/v02/make-data_for_v02.html
@@ -10,7 +10,7 @@
 
 
 
-<meta name="date" content="2021-09-16" />
+<meta name="date" content="2021-09-17" />
 
 <title>make-data_for_v02</title>
 
@@ -172,7 +172,7 @@ function toggle_visibility(id1) {
 <h1 class="title toc-ignore">make-data_for_v02</h1>
 <p class="author-name">Satoshi Kume<span class="affil-mark">*</span></p>
 <p class="author-email"><span class="affil-mark">*</span><a href="mailto:satoshi.kume.1984@gmail.com">satoshi.kume.1984@gmail.com</a></p>
-<h4 class="date">2021-09-16</h4>
+<h4 class="date">2021-09-17</h4>
 <h4 class="package">Package</h4>
 <p>BioImageDbs 1.0.5</p>
 
@@ -260,8 +260,7 @@ document.addEventListener("DOMContentLoaded", function() {
       links[i].target = '_blank';
 });
 </script>
-<p><strong>Last modified:</strong> 2021-09-16 19:46:43<br />
-<strong>Compiled</strong>: Thu Sep 16 19:46:45 2021</p>
+<p><strong>Compiled</strong>: Fri Sep 17 01:23:24 2021</p>
 <p><strong>This script for the v02 dataset</strong></p>
 <div id="load-the-package" class="section level1" number="1">
 <h1><span class="header-section-number">1</span> Load the package</h1>
